tests/typing/bad/testfile-duplicate_var-1.scala
class C { def m(x: Int, x: Int){} }
object Main { def main(args: Array[String]) { } }
